--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,9 @@ go:
 - "1.10"
 - 1.11.x
 - master
+- tip
+  
+before_install:
+  - go get github.com/mattn/goveralls
+script:
+  - $GOPATH/bin/goveralls -service=travis-ci
