--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,6 +4,9 @@ on: [push, pull_request]
 
 jobs:
   test:
+    env:
+      GOPATH: ${{ github.workspace }}
+  
     strategy:
       matrix:
         go-version: ["1.14", "1.13", "1.12", "1.x"]
@@ -26,6 +29,8 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          path: ./src/github.com/${{ github.repository }}
         
       - name: Go Format
         run: go fmt ./...
