--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,7 @@ jobs:
   
     strategy:
       matrix:
-        go-version: ["1.14", "1.13", "1.12", "1.x"]
+        go-version: ["1.14", "1.13", "1.x"]
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
 
@@ -29,8 +29,6 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          path: ./src/github.com/${{ github.repository }}
         
       - name: Go Format
         run: go fmt ./...
