--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,9 +30,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         
-      - name: Go Format
-        run: go fmt ./...
-        
       - name: Test
         run: go test ./...
 
@@ -49,3 +46,6 @@ jobs:
 
       - name: Test build
         run: go build .
+        
+      - name: actions-goveralls
+        uses: shogo82148/actions-goveralls@v1.4.0
