--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,14 +21,20 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
             
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{ matrix.go-version }}
-
       - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/setup-go@v1
+        with:
+          go-version: ${{ matrix.go }}
+      - uses: actions/checkout@v2
+      - run: go test -v -coverprofile=profile.cov ./...
         
+      - name: Send coverage
+        uses: shogo82148/actions-goveralls@v1
+        with:
+          path-to-profile: profile.cov
+          flag-name: Go-${{ matrix.go }}
+          parallel: true
+          
       - name: Test
         run: go test ./...
           
@@ -45,7 +51,6 @@ jobs:
 
       - name: Test build
         run: go build .
-        
         
   # notifies that all test jobs are finished.
   finish:
