--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,13 +21,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
             
-      - name: Checkout code
-        uses: actions/setup-go@v1
+      - name: Install Go
+        uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go }}
 
+      - name: Checkout code
       - uses: actions/checkout@v2
-        
+      
       - name: Test coverage
         run: go test -v -coverprofile=profile.cov ./...
         
