--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,13 +24,13 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: ${{ matrix.go }}
+          go-version: ${{ matrix.go-version }}
 
       - name: Checkout code
         uses: actions/checkout@v2
-      
-      - name: Test coverage
-        run: go test -v -coverprofile=profile.cov ./...
+        
+      - name: Test
+        run: go test ./...
           
       - name: go vet
         run: go vet ./...
@@ -39,25 +39,11 @@ jobs:
         run: |
           go get -u honnef.co/go/tools/cmd/staticcheck
           staticcheck -checks all ./...
-
       - name: Review security
         run: go get github.com/securego/gosec/cmd/gosec; gosec ./...
 
       - name: Test build
         run: go build .
-     
-      - name: Send coverage
-        uses: shogo82148/actions-goveralls@v1
-        with:
-          path-to-profile: profile.cov
-          flag-name: Go-${{ matrix.go }}
-          parallel: true
         
-  # notifies that all test jobs are finished.
-  finish:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: shogo82148/actions-goveralls@v1
-        with:
-          parallel-finished: true
+      - name: actions-goveralls
+        uses: shogo82148/actions-goveralls@v1.4.0
