--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Test
-        run: go test ./...
+        run: go test -coverprofile=covprofile ./...
           
       - name: go vet
         run: go vet ./...
@@ -47,3 +47,5 @@ jobs:
         
       - name: actions-goveralls
         uses: shogo82148/actions-goveralls@v1.4.0
+        with:
+          path-to-profile: covprofile
