--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,6 @@
 name: Build
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
    
@@ -8,7 +8,7 @@ jobs:
     
     strategy:
       matrix:
-        go-version: ["1.16", "1.15", "1.14"]
+        go-version: ["1.16", "1.15"]
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
 
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Test
-        run: go test ./...
+        run: go test -coverprofile=covprofile ./...
           
       - name: go vet
         run: go vet ./...
@@ -47,3 +47,5 @@ jobs:
         
       - name: actions-goveralls
         uses: shogo82148/actions-goveralls@v1.4.0
+        with:
+          path-to-profile: covprofile
