--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,10 +35,6 @@ jobs:
       - name: go vet
         run: go vet ./...
 
-      - name: Staticcheck
-        run: |
-          go get -u honnef.co/go/tools/cmd/staticcheck
-          staticcheck -checks all ./...
       - name: Review security
         run: go get github.com/securego/gosec/cmd/gosec; gosec ./...
 
@@ -49,3 +45,10 @@ jobs:
         uses: shogo82148/actions-goveralls@v1.4.0
         with:
           path-to-profile: covprofile
+
+      - name: Staticcheck
+      	- uses: dominikh/staticcheck-action@v1.2.0
+	        with:
+	          version: "2022.1.1"
+		        install-go: false
+		        cache-key: ${{ matrix.go }}
