--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -47,8 +47,8 @@ jobs:
           path-to-profile: covprofile
 
       - name: Staticcheck
-      	- uses: dominikh/staticcheck-action@v1.2.0
-	        with:
-	          version: "2022.1.1"
-		        install-go: false
-		        cache-key: ${{ matrix.go }}
+      	uses: dominikh/staticcheck-action@v1.2.0
+	      with:
+	        version: "2022.1.1"
+		      install-go: false
+		      cache-key: ${{ matrix.go }}
