--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -46,8 +46,7 @@ jobs:
         with:
           path-to-profile: covprofile
 
-      - name: Staticcheck
-      	uses: dominikh/staticcheck-action@v1.2.0
+      - uses: dominikh/staticcheck-action@v1.2.0
 	      with:
 	        version: "2022.1.1"
 		      install-go: false
