--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,7 +8,7 @@ jobs:
     
     strategy:
       matrix:
-        go-version: [1.17, 1.19]
+        go-version: ["1.17", "1.19"]
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
 
@@ -50,4 +50,4 @@ jobs:
 	      with:
 	        version: "2022.1.1"
 		      install-go: false
-		      cache-key: ${{ matrix.go }}
+		      cache-key: ${{ matrix.go-version }}
