--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,7 +8,7 @@ jobs:
     
     strategy:
       matrix:
-        go-version: ["1.17", "1.19"]
+        go-version: ["1.18", "1.20"]
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
 
@@ -35,7 +35,7 @@ jobs:
       - name: go vet
         run: go vet ./...
 
-      - name: StaticCheck
+      - name: Static check
         uses: dominikh/staticcheck-action@v1.2.0
 
       - name: Review security
