--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,14 +29,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         
+      - name: Static check
+        uses: dominikh/staticcheck-action@v1.2.0
+        with:
+		      version: "2022.1.1"
+		      install-go: false
+		      cache-key: ${{ matrix.go }}
+
       - name: Test
         run: go test -coverprofile=covprofile ./...
           
       - name: go vet
         run: go vet ./...
-
-      - name: Static check
-        uses: dominikh/staticcheck-action@v1.2.0
 
       - name: Review security
         run: go get github.com/securego/gosec/cmd/gosec; gosec ./...
