--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,7 +11,8 @@ jobs:
         go-version: ["1.18", "1.20.x"]
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
-
+    env:
+      GO111MODULE: on
     steps:
     - uses: actions/checkout@v3
     - name: Setup Go
