--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -60,7 +60,7 @@ jobs:
           # skip-build-cache: true
  # notifies that all test jobs are finished.
   finish:
-    needs: test
+    needs: golangci
     runs-on: ubuntu-latest
     steps:
       - uses: shogo82148/actions-goveralls@v1
