--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -27,12 +27,12 @@ jobs:
           # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
           version: latest
 
-      - run: "go test ./... -coverprofile=covprofile ./..."
+      - run: "go test ./... -coverprofile=covprofile.cov ./..."
 
       - name: Send coverage
         uses: shogo82148/actions-goveralls@v1
         with:
-          path-to-profile: profile.cov
+          path-to-profile: covprofile.cov
           flag-name: Go-${{ matrix.go }}
           parallel: true
 
